--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Andry Villacarlos</h1>
     <h1>Mark Neil Resaba</h1>
     <h1>Luna Redoble</h1>
+    <h1>Marc Ray Genilla</h1>
 </body>
 </html>
